# study_participant_assignment_interface

./: .gitignore  .pre-commit-config.yaml  HANDLER_TESTING_PLAN.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
Dockerfiles/: lambda_get_study_assignment.Dockerfile
docs/plans/2026-04-03_pr3_dynamodb_tables_403003/: plan.md
docs/plans/2026-04-05-prod-smoke-test/: plan.md
docs/plans/2026-04-05-smoke-test-runner/: plan.md
docs/plans/2026-04-05_load_testing_get_study_assignment/: plan.md
docs/plans/2026-04-07_fix_assignment_selector_274090/: BUG_REPORT.md  README.md  plan.md
docs/runbook/: DEPLOY_INFRA.md
infra/: .terraform.tfstate.lock.info  get_study_assignment_lambda.tf  main.tf  outputs.tf  variables_get_study_assignment.tf
infra/tests/: dynamodb_e2e_tests.py
jobs/mirrorview/: README.md  all_mirrors_claude.csv  constants.py  generate_assignment_ids.py  precompute_assignments.py  upload_precomputed_data_to_s3.py  validate_precomputed_assignments.py
jobs/mirrorview/tests/: conftest.py  test_generate_assignment_ids.py  test_precompute_assignments.py
lambdas/: README.md
lambdas/api_get_assignment/: handler.py
lambdas/get_study_assignment/: handler.py
lib/: __init__.py  dynamodb.py  mirrorview_assignment_validate.py  s3.py  smoke_testing_utils.py  testing_utils.py  timestamp_utils.py
lib/tests/: s3_smoke_test.py
scripts/: build_and_push_lambda.sh  build_and_push_lambda_image_to_ecr.sh  deploy_get_study_assignment_lambda_image.sh
strategy_planning/: 2026-04-03_v1_system_design.md
(+27 files in other folders)
