[project]
name = "study-participant-assignment-interface"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["."]
exclude = [".venv"]
